[W6-D2] feat: thumbnail + download auth + wire attachments to message
- Flyway V8: add thumbnail_internal_path column to files table
- ThumbnailService: Thumbnailator 200x200, fail-open (upload success if thumb fails)
- StorageService: resolveAbsolute with canonical path check (SecurityException on traversal)
- FileAuthService: uploader OR conv-member check, anti-enumeration 404
- GET /api/files/{id}/thumb: new endpoint, Cache-Control 7d, ETag
- MessageDto: add attachments: FileDto[] field (always non-null list)
- SendMessagePayload: add attachmentIds field
- MessageService: validate 5 attachment rules (count/ownership/expiry/unique/group)
- MessageMapper: load attachments in toDto, strip to [] when message deleted
- 191/191 tests pass (172 baseline + 19 new)
- Reviewer APPROVED: 16/16 blocking checks pass, ADR-019..022 documented

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>